--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
     padding: 0;
     border: 0;
+    margin: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
@@ -20,7 +21,8 @@ body {
 }
 .frascos-container {
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
+    justify-content: center;
     gap: 48px;
 
     cursor:pointer; 
@@ -37,9 +39,18 @@ body {
     height: 192px;
     padding: 4px;
 
-    border: 3px solid black;
+    border: 4px solid black;
 
     border-radius: 0 0 24px 24px;
+}
+.frasco-container:nth-child(1) {
+    border-color: #c05314;
+}
+.frasco-container:nth-child(3) {
+    border-color: #fcbb21;
+}
+.frasco-container:nth-child(4) {
+    border-color: #f73025;
 }
 .esfera {
     width: 52px;
@@ -112,10 +123,28 @@ MODALS
    margin-left: 12px;
 }
 .modal__body {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 12px;
     margin-left: 12px;
 }
 .button-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     justify-self: center;
+}
+.start__button {
+    font-size: 18px;
+    cursor: pointer;
+
+    border: 2px solid black;
+
+    border-radius: 12px;
+    height: 3rem;
+    width: 5em;
+
+    margin-right: 1rem;
 }
 .difficult__button {
     font-size: 18px;
@@ -174,9 +203,9 @@ MODALS
 }
 
 /* Media Query */
-@media(width < 600px) {
+@media(width < 1024px) {
     h1 {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
     .modal-container {
         width: 75%;
